// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render NewComment component correctly with props to edit comment 1`] = `
<DocumentFragment>
  <div
    class="comment-form-container"
  >
    <form
      class="comment-form"
      data-testid="comment_form"
    >
      <p
        class="error_message"
        data-testid="comment_error"
      />
      <textarea
        data-testid="comment_input"
        maxlength="255"
        placeholder="Create A Comment on this Bug!"
      >
        You can fix this bug by adding a default value!
      </textarea>
      <div
        class="buttons-container"
      >
        <button>
          Save
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Should render NewComment component correctly with props to new comment 1`] = `
<DocumentFragment>
  <div
    class="comment-form-container"
  >
    <form
      class="comment-form"
      data-testid="comment_form"
    >
      <p
        class="error_message"
        data-testid="comment_error"
      />
      <textarea
        data-testid="comment_input"
        maxlength="255"
        placeholder="Create A Comment on this Bug!"
      />
      <div
        class="buttons-container"
      >
        <button
          disabled=""
        >
          Add
        </button>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`Should render NewComment component correctly without props 1`] = `
<DocumentFragment>
  <div>
    <a>
      Login
    </a>
     or 
    <a>
      Sign In
    </a>
     to Add a Comment!
  </div>
</DocumentFragment>
`;
